--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-boilerplate-sk9",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "engines" : {
     "node" : ">=0.10"
   },
@@ -10,7 +10,8 @@
     "webpack-dev-server": "npm run clean && STANDALONE=1 node_modules/.bin/nodemon server/webpack-dev-server.js",
     "build": "npm run clean && BUILD_DEPLOY=1 node_modules/.bin/webpack -p --config webpack.config.js --progress --color",
     "deploy": "npm run clean && BUILD_DEPLOY=1 node_modules/.bin/webpack -p --config webpack.config.js --progress --color && NODE_ENV=production node_modules/.bin/nodemon server/server.js",
-    "start": "npm run clean && node_modules/.bin/nodemon server/server.js"
+    "start": "npm run clean && node_modules/.bin/nodemon server/server.js",
+    "postinstall": "bower install"
   },
   "devDependencies": {
     "webpack": "^1.8.10",
@@ -23,12 +24,12 @@
     "jade-loader": "^0.7.1",
     "jscs": "^1.13.0",
     "jscs-loader": "0.0.5",
-    "ng-annotate-loader": "0.0.2",
     "nodemon": "^1.3.7",
     "sass-loader": "^0.6.0",
     "style-loader": "^0.10.1",
     "stylus-loader": "^1.1.0",
     "url-loader": "^0.5.5",
+    "source-map-loader": "^0.1.5",
     "webpack-dev-middleware": "^1.0.11",
     "webpack-dev-server": "^1.8.0"
   }
