--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "webpack-boilerplate-sk9",
   "version": "0.3.0",
-  "engines" : {
-    "node" : ">=0.10"
+  "engines": {
+    "node": ">=0.10"
   },
   "scripts": {
-    "clean": "rm -rf public/build",
+    "clean": "rm -rf build",
     "webpack": "npm run clean && node_modules/.bin/webpack --config webpack.config.js --progress --color",
     "webpack-dev-server": "npm run clean && STANDALONE=1 node_modules/.bin/nodemon server/webpack-dev-server.js",
     "build": "npm run clean && BUILD_DEPLOY=1 node_modules/.bin/webpack -p --config webpack.config.js --progress --color",
     "deploy": "npm run clean && BUILD_DEPLOY=1 node_modules/.bin/webpack -p --config webpack.config.js --progress --color && NODE_ENV=production node_modules/.bin/nodemon server/server.js",
     "start": "npm run clean && node_modules/.bin/nodemon server/server.js",
-    "postinstall": "bower install"
+    "webpack-stats": "BUILD_DEPLOY=1 node_modules/.bin/webpack --config webpack.config.js -p --profile --json > stats.json",
+    "webpack-analyse": "npm run webpack-stats && node_modules/.bin/webpack-dev-server --content-base node_modules/webpack-analyse/dist --port 3052",
+    "postinstall": "bower install && node_modules/.bin/grunt --gruntfile node_modules/webpack-analyse/Gruntfile.js"
   },
   "devDependencies": {
     "webpack": "^1.8.10",
@@ -32,5 +34,10 @@
     "source-map-loader": "^0.1.5",
     "webpack-dev-middleware": "^1.0.11",
     "webpack-dev-server": "^1.8.0"
+  },
+  "dependencies": {
+    "extract-text-webpack-plugin": "^0.8.2",
+    "grunt-cli": "^0.1.13",
+    "webpack-analyse": "git://github.com/webpack/analyse"
   }
 }
