--- a/client-angular-1.x/package.json
+++ b/client-angular-1.x/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "css-loader": "^0.23.1",
+    "express": "^4.13.4",
     "html-loader": "^0.4.0",
     "jade": "^1.11.0",
     "jade-loader": "^0.8.0",
@@ -26,9 +27,9 @@
     "nodemon": "^1.8.1",
     "postcss-alias": "^0.2.2",
     "postcss-custom-properties": "^5.0.0",
+    "postcss-extend": "^1.0.1",
     "postcss-import": "^7.1.3",
     "postcss-loader": "^0.8.0",
-    "postcss-extend": "^1.0.1",
     "postcss-nesting": "^2.1.1",
     "style-loader": "^0.13.0",
     "tape": "^4.4.0",
@@ -45,7 +46,6 @@
     "angular-messages": "^1.4.8",
     "angular-mocks": "^1.4.8",
     "angular-ui-router": "^0.2.15",
-    "autoprefixer": "^6.2.3",
     "babel-runtime": "^6.3.19",
     "ng-fx": "^2.0.4",
     "oclazyload": "^1.0.9"
